--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -14,7 +16,7 @@
     <title>Buscar Cidade</title>
   </head>
   <body>
-    <h1 class="text-center">Temperatura Cidade</h1>
+    <h1 class="text-center"><i class="fas fa-temperature-low fa-lg"></i> Será que está Frio?</h1>
 		
 		<div class="container">
 
@@ -23,7 +25,7 @@
 
                     <form method="get" id="form">
                       <div class="form-group">
-                        <input name="buscar-cidade" type="text" class="form-control" id="buscar-cidade" placeholder="Buscar Cidade">
+                        <input name="buscar-cidade" type="text" class="form-control" id="buscar-cidade" placeholder="Digite aqui o nome da cidade...">
                       </div>
                       
                       <button class="btn btn-success btn-block">Buscar</button>
